CAMBIOS PARA QUE FUNCIONE LA APP